--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav{
     padding: 1rem;
     border-radius: 6rem;
     width: 5rem;
-    box-shadow: inset 1px 1px 16px rgba(0, 0, 0, 0.087);
+    box-shadow: 2px 1px 5px rgba(128, 128, 128, 0.274);
 
 
 }
@@ -150,7 +150,7 @@ section{
     font-size: 1.95rem;
     margin-bottom: 1.5rem;
     font-family: "poppins",sans-serif;
-    color: rgba(73, 57, 57, 0.811);
+    color: hsla(34, 77%, 46%, 0.811);
 
 }
 
@@ -175,8 +175,8 @@ section{
 .btn{
     transition: all 300ms ease;
     font-weight: 600;
-    border: 2px solid gray;
-    
+    border: none;
+    box-shadow: 2px 1px 5px rgba(128, 128, 128, 0.39);
     width: 8rem;
     padding: 1rem;
     border-radius: 4rem;
@@ -209,7 +209,7 @@ section{
     align-items: center;
     background-color: white;
     margin-top: 2.5rem;
-    box-shadow:  1px 0.5px 9px black;
+    box-shadow:  1px 0.5px 9px rgba(0, 0, 0, 0.322);
     
    
 }
@@ -223,14 +223,16 @@ section{
 
 #about h1{
     font-size: 2rem;
+    color: hsla(34, 77%, 46%, 0.811);
 }
 
 .section-text-container p{
     font-size: 20px;
     padding: 1rem;
     color: cadetblue;
+    
     text-align: center;
-    font-family: cursive;
+    font-family:  Helvetica;
 
 }
 
@@ -246,10 +248,11 @@ section{
     margin-top: 3rem;
     border-radius: 5rem;
     background-color:white;
-    box-shadow:  1px 0.5px 9px black;
+    box-shadow:  1px 0.5px 9px rgba(0, 0, 0, 0.571);
 }
 .section-skills h1{
-   color: rgba(0, 0, 0, 0.779);
+    color: hsla(34, 77%, 46%, 0.811);
+   
 }
 
 .article-container{
@@ -267,7 +270,7 @@ article h3{
     font-size: 1.5rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 0.7rem;
-    color: rgba(0, 0, 0, 0.751);
+    color: rgba(0, 0, 0, 0.571);
    
 }
 
@@ -307,7 +310,7 @@ article img{
     align-items: center;
     text-align: center;
     padding: 3rem;
-    box-shadow: 1px 1px 11px black ;
+    box-shadow: 1px 1px 11px rgba(0, 0, 0, 0.571) ;
     /* border: 2px solid black; */
     border-radius: 3rem;
     background-color: white;
@@ -318,7 +321,8 @@ article img{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     justify-content: center;
     text-align: center;
-    color: rgba(0, 0, 0, 0.751);
+    color: hsla(34, 77%, 46%, 0.811);
+    
     padding: 3rem;
 }
 
@@ -326,34 +330,29 @@ article img{
 #contact{
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    gap: 3rem;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    padding: 3rem;
+    
 }
-.title-contact{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-   color: rgba(0, 0, 0, 0.669);
-    margin-bottom: 5rem;
-}
+/*  */
 
 .contact-info{
     display: flex;
     padding: 1rem;
     gap: 2rem;
-    border: 2px solid rgb(46, 21, 21);
+    box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.669);
     border-radius: 4rem;
     background-color: white;
     
 }
 
 .para a{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-decoration: none;
     color: rgba(0, 0, 0, 0.712);
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
    
 }
@@ -361,9 +360,9 @@ article img{
 .hug{
     display: flex;
     justify-content: center;
-    gap: 1rem;
     
-    padding: 1rem;
+    
+    
 }
 
 .hug img{
@@ -378,12 +377,91 @@ article img{
 
 .contact-container{
     display: flex;
-    padding: 2rem;
+    padding: 1rem;
     gap: 1rem;
+
+    
    
 
 }
 
+
+.left-title h2{
+    font-size: 2.8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: hsla(34, 77%, 46%, 0.811);
+}
+
+
+
+
+/* Contact Form */
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10%;
+  }
+  
+  .contact-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+  }
+  
+  .contact-inputs {
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: rgb(56, 88, 88);
+    border-radius: 50px;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.669);
+  }
+  
+  .contact-left textarea {
+    height: 120px;
+    padding-top: 15px;
+    border-radius: 20px;
+    background-color: #d5d2cb;
+    box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.669);
+  }
+  
+  .contact-inputs:focus {
+    border: 2px solid #4b473f;
+  }
+  
+  .contact-inputs::placeholder {
+    color: #00000084;
+  }
+  
+  .contact-left button {
+    display: flex;
+    align-items: center;
+    box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.669);
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(108, 122, 125);
+    gap: 10px;
+    border-radius: 50px;
+    border: none;
+    background: rgba(255, 255, 255, 0.491);
+    cursor: pointer;
+    animation: text-shadow 3s ease-in-out;
+    transition: all 100ms ease-in-out;
+  }
+  
+  .contact-left button:hover {
+    background-color: #000000a2;
+    color: aliceblue;
+  }
 
 
 
